# m2o-reborn

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  M2OR.sln  Makefile  README.md  appveyor.yml  clean-rebuild.sh  generate.sh.bat  premake.sh.bat  submodules.sh.bat  vs2015_cmake.bat  vs2017_cmake.bat  vs2017_cmake_cef.bat
Binaries/Client/: Client.iobj  Client.ipdb  Launcher.iobj  Launcher.ipdb  debug_log.txt  settings.xml
Binaries/Launcher/: Launcher.iobj  Launcher.ipdb
Binaries/Server/: settings.xml
Client/: Client.vcxproj  Client.vcxproj.filters
Client/src/: CClientSettings.cpp  CClientSettings.h  CCore.cpp  CCore.h  CDebugConsole.cpp  CDebugConsole.h  CDirect3D9Hook.cpp  CDirect3D9Hook.h  CDirect3D9Proxy.cpp  CDirect3D9Proxy.h  CDirect3DDevice9Proxy.cpp  CDirect3DDevice9Proxy.h  CDirectInput8Hook.cpp  CDirectInput8Hook.h  CDirectInput8Proxy.cpp  CDirectInput8Proxy.h  CDirectInputDevice8Proxy.cpp  CDirectInputDevice8Proxy.h  CFontManager.cpp  CFontManager.h  CGame.cpp  CGame.h  CGameState.cpp  CGameState.h  CGraphicsManager.cpp  CGraphicsManager.h  CMPStateManager.cpp  CMPStateManager.h  CNetworkManager.cpp  CNetworkManager.h  CTitleState.cpp  CTitleState.h  ExceptionHandler.cpp  ExceptionHandler.h  FilePatcher.cpp  FilePatcher.h  FilePatches.cpp  GameHooks.cpp  GameHooks.h  GwenManager.cpp  (+5 more)
Game/: Game.vcxproj  Game.vcxproj.filters
Game/src/: CCamera.hpp  CCameraModule.hpp  CCar.hpp  CEntity.hpp  CEntityFactory.cpp  CGameCameraMafia.hpp  CGameGuiModule.hpp  (+21 more)
Launcher/: Launcher.vcxproj  Launcher.vcxproj.filters
Server/: Server.vcxproj  Server.vcxproj.filters
Shared/: AConfiguration.cpp  AConfiguration.h  BuildVersion.h  CSignelton.h  Common.h  Constants.h  FileLogger.cpp  FileLogger.h  MessageID.h  String.hpp  Types.h
_/: Client.vcxproj.filters
binary/: client-pair.bat  client.bat  server.sh.bat
client/: callbacks.h  cef_worker.cpp  client.cpp  game.h  hacks.h  init.h  mod.h  proxies.h
code/: cibuild.cmd  pmake.cmd  premake5.lua  smodules.cmd
docs/: README.md  building.md
launcher/: launcher.cpp
misc/: generate-api.js  generate-api.rs  m2o-2clients.ahk  reverse.todo.txt
projects/cef_worker/: CMakeLists.txt  manifest.xml
projects/client/: CMakeLists.txt  m2o_api.h  m2o_client.h  mod.cpp  win32.cpp
projects/client/archive/: client.h
projects/client/archive/core/: cef.h  graphics.h  mod.h
projects/client/archive/helpers/: cubic_hermite.h
projects/client/archive/hooks/: gamemodule.h
projects/client/archive/states/: connected.h  debug.h  stuff.h  title.h  title_dx.h
projects/client/archive/tools/: exception_handler.h
projects/client/core/: mod.h  newveh_sync.h  pedestrian.h  vehicle.h
projects/client/mod/: mod.h  newveh_sync.h  pedestrian.h  vehicle.h
projects/client/mod/vehicle/: interp.h
projects/client/win32/: cef.hpp  cef_copy.hpp  exceptions_impl.hpp  gfx.hpp  gfx_impl.hpp  input.hpp  input_impl.hpp
projects/client/win32/gfx/: CDirect3D9Proxy.h  CDirect3DDevice9Proxy.h
projects/client/win32/input/: CDirectInput8Proxy.h  CDirectInputDevice8Proxy.h
projects/launcher/: CMakeLists.txt  launcher.cpp
projects/m2sdk/: .gitrepo  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
projects/m2sdk/include/: m2sdk.h
projects/m2sdk/include/classes/: CActorVehicle.hpp  CApplication.hpp  CCar.hpp  CCarActionBreakIn.hpp  CCarActionThrowFrom.hpp  CCarOwnerDB.hpp  CCore.hpp  CDoor.hpp  CEntity.hpp  CGameRenderingSystemModule.hpp  CGuiGame.hpp  CHud.hpp  CHudScriptW.h  CHumanHeadController.hpp  CHumanScript.hpp  CHumanWeaponController.hpp  CLockpick.hpp  CModel.hpp  CPhoneBook.hpp  CPoliceRadio.hpp  CPoliceWanted.hpp  CProgramsDB.hpp  CRadio.hpp  CRangeMeter.hpp  CRenderCamera.hpp  CSDSModelManager.hpp  CScriptMachine.hpp  CSlotManager.hpp  CSpeedometer.hpp  CTableData.hpp  CTables.hpp  CTickedModuleManager.hpp  CTimer.hpp  CTrafficLightsMgr.hpp  CVehicle.hpp  ccamera.hpp  chuman2.hpp  cmafiaframework.hpp
projects/m2sdk/include/m2sdk/: m2sdk.h
projects/m2sdk/include/m2sdk/classes/: CActor.hpp  CActorVehicle.hpp  CCar.hpp  CCarManager.hpp  CCore.hpp  CEntityPos.hpp  CFrame.hpp  CGameCamera.hpp  CGameCameraMafia.hpp  CGameRenderingSystemModule.hpp  CGameTrafficModule.hpp  CGfxEnvironmentEffects.hpp  CHud.hpp  CLua.hpp  CModel.hpp  CRangeMeter.hpp  CResources.hpp  CScene.hpp  CScriptMachine.hpp  CSlotManager.hpp  CVehDoor.hpp  CVehicle.hpp  CVehicleEffectManager.hpp  ccamera.hpp  chuman2.hpp  cmafiaframework.hpp
projects/m2sdk/include/m2sdk/utils/: Matrix.hpp
projects/m2sdk/include/m2sdk/wrappers/: camera.hpp  config.hpp  entity.hpp  models.hpp
projects/m2sdk/include/utils/: Matrix.hpp  Memory.hpp  Quaternion.hpp
projects/m2sdk/include/wrappers/: camera.hpp  config.hpp  entity.hpp  game.hpp  models.hpp
projects/m2sdk/lib/: m2sdk.lib
projects/m2sdk/src/: entity.hpp  gamehooks.h  gamehooks.hpp  m2sdk.cpp  memory.hpp  sdp.hpp  steamdrm.hpp  temp.hpp
projects/server/: CMakeLists.txt  server.cpp
projects/server/api/: api.h  arguments.h  errors.h  general.h  pedestrian.h  player.h  vehicle.h  vtable.h
projects/server/core/: masterlist.h  pedestrian.h  plugin_manager.h  router.h  settings.h  vehicle.h
projects/tmp_m2sdk/: CMakeLists.txt
projects/tmp_m2sdk/include/classes/: CActor.hpp  CCar.hpp  CCarManager.hpp  CEntityFactory.hpp  CFrame.hpp  CGame.hpp  CGameCamera.hpp  CGameGuiModule.hpp  CGameTrafficModule.hpp  CHuman2CarWrapper.hpp  CHumanInventory.hpp  CLua.hpp  CNavigation.hpp  CPlayer2.hpp  CPlayerModelManager.hpp  CRtRGameModule.hpp  CSDSManager.hpp  CScriptMachineManager.hpp  CShotManager.hpp  CSlot.hpp  CTickedModuleManager.hpp  CTrafficLightsMgr.hpp  CVehicle.hpp  CWeatherManager.hpp  CWrappersList.hpp  SLightManager.hpp
projects/tmp_m2sdk/include/wrappers/: lua.hpp
projects/tmp_m2sdk/src/: entity.hpp  gamehooks.hpp  temp.hpp
projects/worker/: CMakeLists.txt  worker.cpp
server/: callbacks.h  server.cpp  settings.h
shared/: components.h  defines.h  extensions.h  header.h  includes.h  messages.h  shared_defines.h  types.h
test/: args.c  plugin.c
tools/: README.md
(+361 files in other folders)
